[tool.poetry]
name = "next.py"
version = "0.1.0"
description = "A controversial serverside framework"
authors = ["Craig Mulligan <git@hobochild.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
MIXT = "^1.2.3"
flake8 = "^3.8.3"
starlette = "^0.13.7"
uvicorn = "^0.11.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
